# ARM-Hackhathon

.theia/: settings.json
.wsdata/: clang_dir_map.json
Screenshots_&_Documents/: SYSTEM ARCHITECTURE.docx
cnn_accl/: cnn.cpp  cnn.h  compile_commands.json  hls_config.cfg  vitis-comp.json  weight_gen.py  weights.h
cnn_accl/cnn_accl/: cnn_accl.hlscompile_summary  cnn_accl.hlsrun_package_summary
cnn_accl/cnn_accl/hls/: config.cmdline  hls_data.json
cnn_accl/cnn_accl/reports/: hls_impl_pnr.rpt  hls_impl_syn.rpt  v++_compile_cnn_accl_guidance.html
cnn_app/: vitis-comp.json
cnn_app/_ide/: hwspec.checksum
cnn_app/_ide/.theia/: launch.json
cnn_app/src/: CMakeLists.txt  app.yaml  compile_commands.json  lscript.ld  main.c
cnn_platform/: vitis-comp.json
cnn_platform/hw/: design_1_wrapper.xsa
cnn_platform/hw/sdt/: pcw.dtsi  pl.dtsi  system-top.dts
cnn_platform/hw/sdt/drivers/cnn_accelerator_v1_0/src/: CMakeLists.txt
cnn_platform/zynqmp_fsbl/: CMakeLists.txt  app.yaml  psu_init.c  psu_init.h
cnn_platform/zynqmp_fsbl/zynqmp_fsbl_bsp/: bsp.yaml  lib_list.yaml  lop-config.dts.dtb  lop-config.dts.pp
cpu_baseline/: cpu_baseline.cpp
zynq_cnn_hw/: zynq_cnn_hw.xpr
zynq_cnn_hw/zynq_cnn_hw.cache/wt/: synthesis.wdf
zynq_cnn_hw/zynq_cnn_hw.runs/.jobs/: vrs_config_1.xml
zynq_cnn_hw/zynq_cnn_hw.runs/design_1_auto_ds_0_synth_1/: .vivado.begin.rst  design_1_auto_ds_0.dcp  design_1_auto_ds_0.tcl  design_1_auto_ds_0.vds  dont_touch.xdc  gen_run.xml  rundef.js  runme.sh  vivado.jou  vivado.pb
zynq_cnn_hw/zynq_cnn_hw.runs/design_1_auto_ds_1_synth_1/: gen_run.xml  (+10 more)
(+850 files in other folders)
